--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       <div class="page-header">
         <nav class="nav">
           <p class="logo-top"><span class="logoWeb">Web</span>Studio</p>
-          <ul class="nav-list">
+          <ul class="nav-list ">
             <li class="site-nav-link">
-              <a href="./index.html" class="current-link">Студия</a>
+              <a href="./index.html" class="current-link header-link">Студия</a>
             </li>
             <li class="site-nav-link">
-              <a href="./portfolio.html" class="site-nav-content">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav-content current-link">Портфолио</a>
             </li>
             <li class="site-nav-link">
-              <a href="" class="site-nav-content">Контакты</a>
+              <a href="" class="site-nav-content current-link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -37,14 +37,13 @@
         <ul class="contacts-top">
           <li class="contacts-top-item">
             <a href="mailto:info@devstudio.com" class="contacts-top-link mail">
-              <svg class="email-icon" width="16px" height="12px">
+              <svg class="email-icon">
                 <use href="./images/symbol-defs2.svg#icon-email-icon"></use>
               </svg>
               info@devstudio.com</a>
           </li>
           <li class="contacts-top-item">
-            <a href="tel:+380961111111" class="contacts-top-link phone"><svg class="phone-icon" width="10px"
-                height="16px">
+            <a href="tel:+380961111111" class="contacts-top-link phone"><svg class="phone-icon">
                 <use href="./images/symbol-defs2.svg#icon-phone-icon"></use>
               </svg>
               +38 096 111 11 11</a>
