--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,13 @@
                         <p class="logo-top"><span class="logoWeb">Web</span>Studio</p>
                         <ul class="nav-list">
                             <li class="site-nav-link">
-                                <a href="./index.html" class="site-nav-content">Студия</a>
+                                <a href="./index.html" class="site-nav-content current-link">Студия</a>
                             </li>
                             <li class="site-nav-link">
-                                <a href="./portfolio.html" class="current-link">Портфолио</a>
+                                <a href="./portfolio.html" class="current-link header-link">Портфолио</a>
                             </li>
                             <li class="site-nav-link">
-                                <a href="" class="site-nav-content">Контакты</a>
+                                <a href="" class="site-nav-content current-link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
